--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@aminbaghbanzadeh/chakra-admin-panel",
-  "version": "1.1.13",
+  "version": "1.1.38",
   "description": "simple responsive admin dashboard with chakra ui, supporting error boundary and lazy loading",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -32,7 +32,8 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.3",
+    "@types/react-helmet": "^6.1.5"
   },
   "peerDependencies": {
     "@chakra-ui/icons": "^2.0.2",
@@ -53,6 +54,7 @@
     "react-icons": "^3.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "react-helmet": "^6.1.0"
   }
 }
